fix(UserAccount): aligned header text
* fix(UserAccount): aligned a word

the word 'or' is now aligned

* test(UserAccount): updated snapshot

the snapshot has been updated

--- a/react/Header/components/UserAccount/UserAccount.less
+++ b/react/Header/components/UserAccount/UserAccount.less
@@ -25,4 +25,5 @@
 
 .displayText {
   color: @saGrey3;
+  padding: 0;
 }
